feat(fiscal): migrar Siscomex para busca local via dump completo de NCM